[package]
name = "bitiodine-rust"
version = "0.0.3"
authors = ["Michele Spagnuolo <mikispag@gmail.com>"]

[dependencies]
arrayref = "0.3.6"
bitcoin-bech32 = "0.11.0"
byteorder = "1.3.4"
base58 = "0.1.0"
chrono = "0.4.13"
clap = "2.33.1"
dirs = "3.0.1"
rust-crypto = "0.2.36"
log = "0.4.8"
env_logger = "0.7.1"
memmap = "0.7.0"
rustc-serialize = "0.3.24"
time = "0.2.16"
vec_map = "0.8.2"
void = "1.0.2"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 3                # Controls the --opt-level the compiler builds with
debug = true                 # Controls whether the compiler passes `-g`
debug-assertions = true      # Controls whether debug assertions are enabled

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3                # Controls the --opt-level the compiler builds with
debug = false                # Controls whether the compiler passes `-g`
debug-assertions = false     # Controls whether debug assertions are enabled
lto = true
